merged VKHelper. add GeneralManager